--- a/portal-api/src/main/webapp/WEB-INF/web.xml
+++ b/portal-api/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath*:config/spring/context-*.xml</param-value>
+		<param-value>classpath*:/config/spring/context-*.xml</param-value>
 	</context-param>
 	
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
@@ -15,23 +15,6 @@
 	</listener>
 
 	<!-- Processes application requests -->
-<!-- 
-	<servlet>
-		<servlet-name>appServlet</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<init-param>
-			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-		
-	<servlet-mapping>
-		<servlet-name>appServlet</servlet-name>
-		<url-pattern>/</url-pattern>
-	</servlet-mapping>
--->
-
 	<servlet>
 	        <servlet-name>action</servlet-name>
 	        <servlet-class>
