--- a/portal-api/pom.xml
+++ b/portal-api/pom.xml
@@ -9,10 +9,20 @@
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
 		<java-version>1.8</java-version>
-		<org.springframework-version>4.2.0.RELEASE</org.springframework-version>
+		<org.springframework-version>4.3.18.BUILD-SNAPSHOT</org.springframework-version>
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 	</properties>
+	<repositories>
+	    <repository>
+	        <id>spring-snapshots</id>
+	        <name>Spring Snapshots</name>
+	        <url>https://repo.spring.io/libs-snapshot</url>
+	        <snapshots>
+	            <enabled>true</enabled>
+	        </snapshots>
+	    </repository>
+	</repositories>	
 	<dependencies>
 		<!-- Spring -->
 		<dependency>
